# CrispASR

./: AUDIT.md  CMakeLists.txt  HISTORY.md  LEARNINGS.md  PERFORMANCE.md  PLAN.md  README.md  RELEASE_NOTES_v0.8.4.md  RELEASE_NOTES_v0.8.5.md  RELEASE_NOTES_v0.8.7.md  RELEASE_NOTES_v0.8.8.md  TODO.md  build-android.sh  build-xcframework.sh
.devops/: main-cuda-12.Dockerfile  main-cuda.Dockerfile  main-intel.Dockerfile  main-musa.Dockerfile  main-vulkan.Dockerfile  main.Dockerfile
ci/: run.sh
crispasr/: Cargo.toml
crispasr-sys/: Cargo.toml  build.rs
crispasr-sys/src/: lib.rs
crispasr/src/: lib.rs
docs/: architecture.md  bindings.md  cli.md  contributing.md  diff-harness-coverage.md  feature-matrix.html  feature-matrix.md  install.md  performance.md  quantize.md  server.md  streaming.md  tts.md
examples/: melotts-test.cpp
glint/: README.md
handover-prompts/: f5-tts-129-continuation.md  outetts-131-handover.md
hf-space/: Dockerfile
hf_readmes/: funasr-mlt-nano-GGUF.md  funasr-nano-GGUF.md  kartoffel-orpheus-3b-german-natural-GGUF.md  kartoffel-orpheus-3b-german-synthetic-GGUF.md  kokoro-82m-GGUF.md  mega-asr-GGUF.md  mimo-asr-GGUF.md  orpheus-3b-base-GGUF.md  parakeet-tdt-0.6b-ja-GGUF.md  parakeet-tdt-0.6b-v2-GGUF.md  parakeet-tdt-1.1b-GGUF.md  parakeet-tdt_ctc-1.1b-GGUF.md  parakeet-tdt_ctc-110m-GGUF.md  qwen3-tts-0.6b-base-GGUF.md  qwen3-tts-0.6b-customvoice-GGUF.md  qwen3-tts-1.7b-customvoice-GGUF.md  sensevoice-small-GGUF.md  stt-ar-fastconformer-hybrid-ctc-large-GGUF.md  stt-be-fastconformer-hybrid-ctc-large-GGUF.md  stt-en-fastconformer-hybrid-ctc-large-GGUF.md  stt-es-fastconformer-hybrid-ctc-large-GGUF.md  stt-fa-fastconformer-hybrid-ctc-large-GGUF.md  stt-fr-fastconformer-hybrid-ctc-large-GGUF.md  stt-hr-fastconformer-hybrid-ctc-large-GGUF.md  stt-hy-fastconformer-hybrid-ctc-large-GGUF.md  stt-it-fastconformer-hybrid-ctc-large-GGUF.md  stt-ka-fastconformer-hybrid-ctc-large-GGUF.md  stt-kk-ru-fastconformer-hybrid-ctc-large-GGUF.md  stt-nl-fastconformer-hybrid-ctc-large-GGUF.md  stt-pl-fastconformer-hybrid-ctc-large-GGUF.md  stt-ru-fastconformer-hybrid-ctc-large-GGUF.md  stt-ua-fastconformer-hybrid-ctc-large-GGUF.md  stt-uz-fastconformer-hybrid-ctc-large-GGUF.md  tada-tts-1b-GGUF.md  tada-tts-3b-ml-GGUF.md  truecaser-de.md  vibevoice-asr-GGUF.md  voxcpm2-GGUF.md
include/: crispasr.h  crispasr_session.h
models/: convert-audioseal-to-gguf.py  convert-bananamind-tts-to-gguf.py  convert-csm-to-gguf.py  convert-f5-tts-to-gguf.py  convert-funasr-to-gguf.py  convert-m2m100-to-gguf.py  convert-melotts-to-gguf.py  convert-moss-audio-to-gguf.py  convert-outetts-to-gguf.py  convert-pcs-to-gguf.py  convert-sensevoice-to-gguf.py  convert-stt-fastconformer-ctc-to-gguf.py  convert-tada-codec-to-gguf.py  convert-tada-to-gguf.py  convert-wavtokenizer-to-gguf.py
python/: pyproject.toml
python/crispasr/: _binding.py
samples/: jfk-vorbis.webm  jfk.amr  jfk.au
src/: CMakeLists.txt  ark_asr.cpp  audioseal.cpp  bananamind_tts.cpp  bananamind_tts.h  bark_tts.cpp  canary.cpp  canary_ctc.cpp  chatterbox.cpp  chatterbox_s3gen.cpp  chatterbox_text_prep.h  cohere.cpp  cohere.h  cosyvoice3_tts.cpp  cosyvoice3_tts.h  crispasr.cpp  crispasr_aligner.cpp  crispasr_aligner.h  crispasr_audio.cpp  crispasr_c_api.cpp  crispasr_cache.cpp  crispasr_cache.h  crispasr_imatrix.cpp  crispasr_model_registry.cpp  crispasr_model_registry.h  crispasr_vad_encdec.cpp  csm_tts.cpp  csm_tts.h  dia_tts.cpp  dots_tts.cpp  dots_tts.h  f5_tts.cpp  fastpitch_tts.cpp  firered_asr.cpp  firered_vad.cpp  fireredpunc.cpp  funasr.cpp  gemma4_e2b.cpp  glm_asr.cpp  grammar-parser.cpp  (+65 more)
tests/: CMakeLists.txt  env-live-tests.sh  test-audio-formats.cpp  test-chatterbox-text-prep.cpp  test-chunked-words.sh  test-crispasr-cache.cpp  test-g2p-en.cpp  test-issue-150-cjk-fallback.cpp  test-issue-79.cpp  test-issue-89-long-audio-fallback.cpp  test-lcs-chunk-merge.cpp  test-lcs-dedup-driver.cpp  test-piper-roundtrip.sh  test-qwen3-tts-codes-determinism.sh  test-registry.cpp  test-server-realtime-api.py  test-server-tts.sh  test-session-setters.cpp  test-stream-partial-decode.cpp  test-stream-vad-skip.cpp  test-tada-params.cpp  test-wyoming-proto.cpp  test_align_only.cpp  test_audit_cross_stack.py  test_beam_size_live.py  test_chunk_context.cpp  test_diarized_json.cpp  test_parakeet_ja_longform_live.cpp  test_python_binding_utils.py  test_server_chunking.cpp  test_snac_unit.cpp  test_tts_provenance.cpp
tools/: asr_coverage_score.py  audit_diff_coverage.py  benchmark_lid.py  (+13 more)
(+169 files in other folders)
